# LocusUtility

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Main/: main.cpp  main.hpp
Sources/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  UserInterface.glade
Sources/Core/CUsb/: CMakeLists.txt  CUsb.cpp  CUsb.hpp
Sources/Core/GlobalHandlerEvents/: GlobalDefs.hpp  GlobalHandlerEvents.cpp  GlobalHandlerEvents.hpp
Sources/Core/SystemSerial/: SystemSerial.cpp  SystemSerial.hpp
Sources/Core/UsbCommunication/: CMakeLists.txt  SerialListener.hpp  UsbCommunication.cpp  UsbCommunication.hpp  UsbTypes.hpp
Sources/Core/UsbCommunication/CUsb/: CMakeLists.txt  CUsb.cpp  CUsb.hpp
Sources/Core/UsbCommunication/Payload/: SerialListener.hpp
Sources/Core/UsbCommunication/SystemSerial/: SystemSerial.cpp  SystemSerial.hpp
Sources/CustomWidgets/: ConnectionDialog.cpp  ConnectionDialog.hpp  FirmwareMethodBox.cpp  FirmwareMethodBox.hpp  MenuBar.cpp  MenuBar.hpp  OpenFileDialog.cpp  OpenFileDialog.hpp  SelectFirmwareBox.cpp  SelectFirmwareBox.hpp
Sources/DroneDevice/: CMakeLists.txt
Sources/DroneDevice/Include/DroneDevice/: AbstractDevice.hpp  DeviceObserver.hpp  FastCrc16.hpp  FastCrc32.hpp  FastCrc8.hpp  List.hpp  MemoryRegion.hpp  Queue.hpp  StaticDeviceHub.hpp
Sources/DroneDevice/Include/DroneDevice/InternalDevice/: FieldList.hpp  FileList.hpp  InternalDevice.hpp
Sources/DroneDevice/Include/DroneDevice/PlazCan/: CanProxy.hpp  CanProxyFeature.hpp  CanProxyHub.hpp  ParamSlave.hpp
Sources/DroneDevice/Include/DroneDevice/Stubs/: MockTime.hpp
Sources/DroneDevice/Libs/: CMakeLists.txt
Sources/DroneDevice/Tests/ConfigFields/: Main.cpp
Sources/DroneDevice/Tests/ExtendedFields/: Main.cpp
Sources/DroneDevice/Tests/File/: DUT.hpp  Main.cpp
Sources/DroneDevice/Tests/GenericFields/: DUT.hpp  Main.cpp
Sources/DroneDevice/Tests/Queue/: Main.cpp
Sources/DroneDevice/Tests/Utils/: Main.cpp
